--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -9,11 +9,14 @@
 }
 
 .text {
-  font-family: "Courier New", Courier, monospace;
-  color: rgb(51, 51, 105);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 0.05em;
 }
 .input {
-  border: 1px solid rgb(51, 51, 105);
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(246, 240, 232);
+  border: 1px solid rgba(21, 139, 76, 0.792);
   width: 350px;
   height: 40px;
 }
