--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,12 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin-left: 40px;
 }
 
 h1 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgba(21, 137, 75, 0.792);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-left: 80px;
   margin-top: 30px;
   font-size: 60px;
